test/types/sync/initFromSync.good
initFromSync.chpl:2: error: invalid copy-initialization
initFromSync.chpl:2: error: Can't initialize a type-inferred variable from a sync
