test/types/sync/initFromSync.chpl
var x$: sync int = 0;
var y = x$;
writeln(y);
writeln(y.type:string);
